fix(css): idcard noise bg bottom overflow

--- a/talos/src/component/login/idcard.module.scss
+++ b/talos/src/component/login/idcard.module.scss
@@ -95,7 +95,7 @@ $karma-5: url('@/assets/images/UI/avt/Karma5.png');
 
 .idCardWrap {
     position: relative;
-    padding: 1.5rem 1rem 1.5rem 1.5rem;
+    padding: 1.25rem 1rem 1.25rem 1.5rem;
     display: grid;
     justify-content: start;
     grid-template-columns: 0.5fr repeat(3, 0.4fr);
